--- a/apps/main/configs/llama_1B.yaml
+++ b/apps/main/configs/llama_1B.yaml
@@ -2,7 +2,7 @@
 
 dump_dir: dump/debug/llama_1B
 name: "llama_1B"
-# steps: 5000000
+steps: 5000000
 
 probe_freq: null
 seed: 777
@@ -35,7 +35,7 @@ data:
 
     batch_size: 16
     prefetch_size: 64
-    seq_len: 4096
+    seq_len: 2048 # change from 4096 to try 8 GPUS
     n_views: 2
     load_async: true
     add_bos: true
@@ -67,7 +67,7 @@ logging:
         entity: "molithu"
         notes: "Training 1B Lingua Model"
 
-async_eval_gpus: 8
+# async_eval_gpus: 8
 eval:
     generator:
         max_tokens: 16384
@@ -76,21 +76,21 @@ eval:
         top_p: 0.95
     harness:
         tasks:
-            - hellaswag
-            - task: boolq
-              dataset_kwargs:
-                trust_remote_code: true
-            - piqa
-            - task: social_iqa
-              dataset_kwargs:
-                trust_remote_code: true
-            - winogrande
-            - openbookqa
-            - arc_easy
-            - arc_challenge
-            - race
-            - commonsense_qa
-            - copa
+            # - hellaswag
+            # - task: boolq
+            #   dataset_kwargs:
+            #     trust_remote_code: true
+            - baber/piqa
+            # - task: social_iqa
+            #   dataset_kwargs:
+            #     trust_remote_code: true
+            # - winogrande
+            # - openbookqa
+            # - arc_easy
+            # - arc_challenge
+            # - race
+            # - commonsense_qa
+            # - copa
             # - coqa
             # - task: nq_open
             #   num_fewshot: 5
